# selanet-client-example

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/sample_output/: README.md  notes_with_comments.jsonl  search_results.jsonl
shared/: __init__.py  logger.py  output.py
